# xK

./: .gitignore  CMakeLists.txt  README.md  build_examples.sh  conanfile.txt
src/: CMakeLists.txt  main.cpp
src/xK-app/: CMakeLists.txt  main.cpp
src/xK-kernel/: CMakeLists.txt
src/xK-kernel/core/: CMakeLists.txt
src/xK-kernel/core/include/async/: async.h  task-queue.h  task-scheduler.h  task.h
src/xK-kernel/core/src/async/: task-queue.cpp  task-scheduler.cpp
src/xK-kernel/window-engine/: CMakeLists.txt
src/xK-kernel/window-engine/include/application/: app_core.h  app_info.h
src/xK-kernel/window-engine/include/utility/: literal.h  log.h
src/xK-kernel/window-engine/include/window/: win_exceptions_generic.h  win_keyboard.h  win_main_window.h  win_window_generic.h
src/xK-kernel/window-engine/include/xgk-vulkan/: vk_core.h  vk_exceptions.h  vk_gpu_wrapper.h  vk_pipeline.h  vk_pipeline_config_info.h  vk_resul_wrappert.h  vk_swap_chain.h  vk_validation_callback.h
src/xK-kernel/window-engine/include/xgk-vulkan/config/: vk_device_extensions.h  vk_validation_layers.h
src/xK-kernel/window-engine/include/xgk-vulkan/shaders/: CMakeLists.txt  compile_shaders.bat  simple_shader.frag
src/xK-kernel/window-engine/src/application/: app_core.cpp
src/xK-kernel/window-engine/src/utility/: literal.cpp
src/xK-kernel/window-engine/src/window/: win_main_window.cpp  win_window_generic.cpp
src/xK-kernel/window-engine/src/xgk-vulkan/: vk_core.cpp  vk_gpu_wrapper.cpp  vk_pipeline.cpp  vk_swap_chain.cpp
src/xk-app/: CMakeLists.txt  main.cpp
src/xk-kernel/: CMakeLists.txt
src/xk-kernel/core/: CMakeLists.txt
src/xk-kernel/core/include/async/: async.h  task-queue.h  task-scheduler.h  task.h
src/xk-kernel/core/src/async/: task-queue.cpp  task-scheduler.cpp
src/xk-kernel/window-engine/: CMakeLists.txt
src/xk-kernel/window-engine/include/application/: app_core.h  app_info.h  app_widgets_container.h
src/xk-kernel/window-engine/include/drawables/: drawable.h
src/xk-kernel/window-engine/include/utility/: cast.h  literal.h  log.h
src/xk-kernel/window-engine/include/window/: win_exceptions_generic.h  win_keyboard.h  win_main_window.h  win_widget.h  win_window_generic.h
src/xk-kernel/window-engine/include/xk-graphics-engine/shaders/: simple_shader.vert
src/xk-kernel/window-engine/include/xk-graphics-engine/xk-engine/: graphics_engine.h  graphics_engine_config.h
src/xk-kernel/window-engine/include/xk-graphics-engine/xk-opengl/: gl_config.h  gl_core.h
src/xk-kernel/window-engine/include/xk-graphics-engine/xk-vulkan/: vk_core.h  vk_exceptions.h  vk_gpu_wrapper.h  vk_pipeline.h  vk_pipeline_config_info.h  vk_resul_wrappert.h  vk_swap_chain.h  vk_validation_callback.h
src/xk-kernel/window-engine/src/application/: app_core.cpp
src/xk-kernel/window-engine/src/window/: win_main_window.cpp  win_window_generic.cpp
src/xk-kernel/window-engine/src/xk-graphics-engine/xk-engine/: graphics_engine.cpp
src/xk-kernel/window-engine/src/xk-graphics-engine/xk-opengl/: gl_core.cpp
(+8 files in other folders)
