cmake_minimum_required(VERSION 3.16)

project(xK VERSION 0.0.1 DESCRIPTION "GUI framework based on Vulkan/ OpenGl graphics API" LANGUAGES CXX C)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(PREBUILT_MODULE_DIR ${CMAKE_BINARY_DIR}/modules)

set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG")

set(CMAKE_CXX_FLAGS_RELEASE  "${CMAKE_CXX_FLAGS_RELEASE} -DRELEASE")

add_subdirectory(external)
add_subdirectory(src)